# aws-exporter

./: .envrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.txt  CODEOWNERS  Dockerfile  Jenkinsfile  MANIFEST.in  README.md  default.nix  pyproject.toml  setup.cfg  setup.py  tox.ini
.circle/: config.yml
.circleci/: config.yml
.github/: codeql-config.yml  codeql-custom.qls
.github/workflows/: codeql-analysis.yml
.jenkins/: python.yaml
.lgtm/python-queries/: qlpack.yml
aws_exporter/: __init__.py  __main__.py  backup.py  cli.py  ec2.py  metrics.py  sns.py  sts.py  util.py
aws_exporter/aws/: __init__.py  backup.py  ec2.py  ses.py  sns.py
tests/: util.py
