[metadata]
name = aws-exporter
url = https://github.com/ClarkSource/aws-exporter
author = Aljosha Friemann
author_email = aljosha.friemann@clark.de
description =
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
platforms = linux
license_file = LICENSE.txt
classifiers =
  Programming Language :: Python :: 3

[options]
zip_safe = False
packages = find:
setup_requires=
  setuptools_scm
install_requires =
  prometheus_client
  click
  boto3
  coloredlogs
  termcolor

[options.packages.find]
exclude =
  tests

[options.package_data]
* = *.txt, *.md, *.rst

[isort]
known_first_party =
  aws-exporter
