[metadata]
name = aws-exporter
url = https://github.com/ClarkSource/aws-exporter
author = Aljosha Friemann
author_email = aljosha.friemann@clark.de
description =
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
platforms = linux
license_file = LICENSE.txt
classifiers =
  Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = True
install_requires =
  prometheus_client
  boto3

[options.package_data]
* = *.txt, *.md, *.rst

[options.entry_points]
console_scripts =
  aws-exporter = aws_exporter.cli:main
